--- a/arx-libertatis/config
+++ b/arx-libertatis/config
@@ -82,7 +82,7 @@ cmake_options+=(
 	-DWITH_SDL=2
 	-DWITH_OPENGL=epoxy
 	-DRUNTIME_LIBEXECDIR=".${env_separator}.."
-	-DRUNTIME_DATADIR=".${env_separator}../.."
+	-DRUNTIME_DATADIR=".${env_separator}..${env_separator}../.."
 )
 
 if [ $is_snapshot = 1 ] && [ $is_release_candidate = 0 ] ; then
@@ -109,8 +109,9 @@ copy_files+=(
 # Set ${command}_COMMAND to the string used to invoke the wrapper script
 wrapper_use_command=1
 
-# Set arx_PATH to overwrite the real binary location in the data path selection
-wrapper_use_cmd_path=1
+# Not needed since arx binaries know to use relative paths for helpers and data directories
+wrapper_use_path=0
+wrapper_use_cmd_path=0
 
 launchers=(
 	[arx-portable]='"arx" --no-data-dir --data-dir="$here" --user-dir="$here" --config-dir="$here"'
