--- a/scripts/windows/build
+++ b/scripts/windows/build
@@ -74,6 +74,7 @@ create_launcher() {
 		-lkernel32
 		-lshell32
 		-Wl,--script="$scriptdir/i386pe.x"
+		-Wl,--entry='start'
 		-DUNICODE
 		-D_UNICODE
 		-DLAUNCHER_USE_PATH="$use_path"
