--- a/scripts/windows/build
+++ b/scripts/windows/build
@@ -92,7 +92,7 @@ create_launcher() {
 	# Select between GUI and console subsystems
 	local copy_resources=0
 	case "$(file "$binary")" in
-		*' executable (GUI)'*) wrapper_options+=( -mwindows -DLAUNCHER_ATTACH_CONSOLE=1 ) ; copy_resources=1 ;;
+		*' executable (GUI)'*) wrapper_options+=( -mwindows ) ; copy_resources=1 ;;
 		*' executable (console)'*) ;;
 		*) die "Unknown binary type: $binary: $(file "$binary")"
 	esac
