build: Fix updating manifest

--- a/scripts/build
+++ b/scripts/build
@@ -47,7 +47,7 @@ done
 
 # Update file list
 _manfiest="${projectdir}/manifest/files.${pkgtype}"
-if [ $is_test_version = 1 ] &&  -f "${_manfiest}" ] ; then
+if [ $is_test_version = 0 ] && [ -f "${_manfiest}" ] ; then
 	[ -d "${projectdir}/manifest" ] || e mkdir "${projectdir}/manifest"
 	_oldfiles="$(cat "${_manfiest}")"
 	_newfiles="$(cd "${_outdir}" && find . -type d -exec sh -c 'printf "%s/\n" "$0"' {} \; -or -print | sed 's:^./::')"
