--- a/config
+++ b/config
@@ -220,11 +220,14 @@ launchpad_key='28555A66D7E1DEC9'
 
 # Ubuntu versions for which to push build jobs to Launchpad
 ubuntu_versions+=(
-	'trusty'  # 14.04 LTS  EOL: 2024-04
-	'xenial'  # 16.04 LTS  EOL: 2026-04
-	'bionic'  # 18.04 LTS  EOL: 2028-04
-	'focal'   # 20.04 LTS  EOL: 2030-04
-	'jammy'   # 22.04 LTS
-	'kinetic' # 22.10
-	'lunar'   # 23.04
+	'trusty'   # 14.04 LTS  EOL: 2024-04
+	'xenial'   # 16.04 LTS  EOL: 2026-04
+	'bionic'   # 18.04 LTS  EOL: 2028-04
+	'focal'    # 20.04 LTS  EOL: 2030-04
+	'jammy'    # 22.04 LTS
+	'kinetic'  # 22.10
+	'lunar'    # 23.04
+	'mantic'   # 23.10
+	'noble'    # 24.04
+	'oracular' # 24.10
 )
